asm_tests/other_testfiles/invalid_files/error48.s
.comment "MORJESTA!"

             
			 
			 
			 .name "MORO" 

live %12 ";
ld %12 r2

